Completed inbound and outbound tests

--- a/force-app/main/default/classes/Inbound Integration/StripeInvoiceWrapper.cls
+++ b/force-app/main/default/classes/Inbound Integration/StripeInvoiceWrapper.cls
@@ -16,6 +16,7 @@ public class StripeInvoiceWrapper {
   public String id;
   public String created;
   public DataWrapper data;
+  public String type;
 
   public class DataWrapper {
     public ObjectWrapper object_wrapper;
