--- a/force-app/main/default/classes/Outbound Integration/UpdateStripeSubscriptionQueuable.cls
+++ b/force-app/main/default/classes/Outbound Integration/UpdateStripeSubscriptionQueuable.cls
@@ -1,6 +1,6 @@
 /**
  * -----------------------------------------------------------------------------
- * DESCRIPTION : Queueable class to perform asynchronous processing of Updating Customers
+ * DESCRIPTION : Queueable class to perform asynchronous processing of Updating Subscriptions
  *
  * AUTHOR      : Brian Premo
  * CREATED     : 2025-06-05
@@ -49,13 +49,9 @@ public with sharing class UpdateStripeSubscriptionQueuable implements Queueable,
       try {
         // Create a new Price in Stripe
         String productId = subscription.Product_ID__c;
-        System.debug('Creating new Price for Product ID: ' + productId);
         Integer amount = (Integer) (subscription.Amount__c * 100); // Convert to cents
-        System.debug('Amount in cents: ' + amount);
         String currencyCode = subscription.Currency__c;
-        System.debug('Currency Code: ' + currencyCode);
         String interval = subscription.Interval__c;
-        System.debug('Interval: ' + interval);
 
         String newPriceId = StripeAPIClient.createPrice(
           productId,
@@ -69,10 +65,6 @@ public with sharing class UpdateStripeSubscriptionQueuable implements Queueable,
         if (!Test.isRunningTest()) {
           update subscription;
         }
-
-        System.debug(
-          'Stripe Subscription updated successfully: ' + subscription.Id
-        );
         // Log the successful update
         Logger.debug(
           'Stripe Subscription updated successfully: ' + subscription.Id
